--- a/content/blogs/myartblog.html
+++ b/content/blogs/myartblog.html
@@ -15,12 +15,13 @@ title: Art Portfolio
 
 
 <p>My love for art stems from growing up in a household where my grandmother was an artist. She is one of my main inspirations for my artworks.</p>
-<p>The artworks below are some of her work:</p>
-<p><img src="/img/ART/IMG_5567.jpg" width="40%" /><img src="/img/ART/IMG_5564.jpg" width="40%" /></p>
+<p>The artworks below are some of her work:
+<img src="/img/ART/IMG_5567.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
+<p><img src="/img/ART/IMG_5564.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
 <p>Growing on this, I started getting into art from a young age. My love for art took me around various art museums as well as weekly visits to the Tate Modern now that I am in London.</p>
 <p>I was able to set up an onlinr profile at <a href="https://www.saatchiart.com/account/artworks/1107889"><strong>Saatchi Art Gallery</strong></a>.</p>
 <p>You can have a look at my art portfolio through the link above.</p>
 <p>My main artworks are oil on canvas some of my favourites which I am attaching below.</p>
 <p><img src="/img/ART/IMG_1930.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/ART/IMG_1932.jpg" width="50%" /></p>
-<p><img src="/img/ART/IMG_5638.jpg" width="50%" /></p>
+<p><img src="/img/ART/IMG_1932.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/ART/IMG_5638.jpg" width="50%" style="background-color: white;padding:10px" /></p>
