--- a/content/blogs/myartblog.html
+++ b/content/blogs/myartblog.html
@@ -22,6 +22,6 @@ title: Art Portfolio
 <p>I was able to set up an onlinr profile at <a href="https://www.saatchiart.com/account/artworks/1107889"><strong>Saatchi Art Gallery</strong></a>.</p>
 <p>You can have a look at my art portfolio through the link above.</p>
 <p>My main artworks are oil on canvas some of my favourites which I am attaching below.</p>
-<p><img src="/img/ART/IMG_1930.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/ART/IMG_1932.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/ART/IMG_5638.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/ART/IMG_1930.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
+<p><img src="/img/ART/IMG_1932.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
+<p><img src="/img/ART/IMG_5638.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
